--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pensione di Reversibilità: Guida Pratica per l'Ex Coniuge</title>
+    <title>Pensione di Reversibilità: Guida per Paola</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,37 +36,37 @@
         
         <!-- Intestazione -->
         <header class="text-center mb-10">
-            <h1 class="text-3xl sm:text-4xl font-bold text-blue-600 mb-2">Guida alla Pensione di Reversibilità per l'Ex Coniuge</h1>
-            <p class="text-lg text-gray-600">Una guida chiara e pratica per capire i tuoi diritti e i passi da compiere.</p>
+            <h1 class="text-3xl sm:text-4xl font-bold text-blue-600 mb-2">Cara Paola, ecco la tua Guida alla Pensione di Reversibilità</h1>
+            <p class="text-lg text-gray-600">Una guida personale e pratica per aiutarti a capire i tuoi diritti e i passi da compiere in questa situazione.</p>
         </header>
 
         <main class="space-y-12">
 
             <!-- Sezione 1: A chi spetta? -->
             <section class="bg-white p-6 rounded-lg shadow-md border border-gray-200">
-                <h2 class="text-2xl font-bold text-gray-900 mb-4">Hai diritto a una quota della pensione?</h2>
-                <p class="mb-4">Anche se il tuo ex marito si era risposato, la legge italiana ti riconosce il diritto a una quota della sua pensione di reversibilità se rispetti queste tre condizioni fondamentali:</p>
+                <h2 class="text-2xl font-bold text-gray-900 mb-4">Hai diritto a una quota della pensione di Aurelio?</h2>
+                <p class="mb-4">Cara Paola, anche se Aurelio si era risposato, la legge italiana ti riconosce il diritto a una quota della sua pensione di reversibilità. Per averne diritto, devi rispettare queste tre condizioni fondamentali:</p>
                 <ul class="list-disc list-inside space-y-3 text-gray-700">
-                    <li><span class="font-semibold">Assegno divorzile:</span> Ricevi un assegno di divorzio periodico stabilito dal Tribunale (non basta una somma "una tantum").</li>
-                    <li><span class="font-semibold">Stato civile:</span> Non ti sei risposata.</li>
-                    <li><span class="font-semibold">Anteriorità:</span> Il rapporto di lavoro (o la pensione) del tuo ex marito da cui deriva la reversibilità è iniziato prima della vostra sentenza di divorzio.</li>
+                    <li><span class="font-semibold">Assegno divorzile:</span> Ricevi un assegno di divorzio periodico stabilito dal Tribunale (non una somma "una tantum").</li>
+                    <li><span class="font-semibold">Stato civile:</span> Non ti sei risposata dopo il divorzio da Aurelio.</li>
+                    <li><span class="font-semibold">Anteriorità:</span> Il rapporto di lavoro (o la pensione) di Aurelio da cui deriva la reversibilità è iniziato prima della vostra sentenza di divorzio.</li>
                 </ul>
             </section>
 
             <!-- Sezione 2: I Passi da Fare Adesso -->
             <section>
-                <h2 class="text-2xl font-bold text-center mb-6">Cosa Fare Adesso: I Passaggi Concreti</h2>
+                <h2 class="text-2xl font-bold text-center mb-6">I Prossimi Passi, Paola: Cosa Fare Ora</h2>
                 <div class="space-y-6">
                     <!-- Passo 1: Ottenere il Certificato di Morte -->
                     <div class="flex items-start bg-white p-6 rounded-lg shadow-md border border-gray-200">
                         <div class="step-number mr-4">1</div>
                         <div>
-                            <h3 class="text-xl font-semibold mb-2">Richiedi il Certificato di Morte</h3>
+                            <h3 class="text-xl font-semibold mb-2">Richiedi il Certificato di Morte di Aurelio</h3>
                             <p class="text-gray-600 mb-3">Questo è il primo documento indispensabile. Non hai bisogno di alcun contatto con la nuova moglie per ottenerlo, perché è un atto pubblico.</p>
                             <div class="bg-blue-50 border-l-4 border-blue-500 p-4 rounded-r-lg">
                                 <h4 class="font-bold">Come fare:</h4>
                                 <ul class="list-disc list-inside mt-2 text-sm">
-                                    <li>Recati all'<strong>Ufficio di Stato Civile</strong> del Comune in cui il tuo ex marito è deceduto.</li>
+                                    <li>Recati all'<strong>Ufficio di Stato Civile</strong> del Comune in cui Aurelio è deceduto.</li>
                                     <li>Se non conosci il Comune del decesso, puoi richiederlo presso l'ultimo Comune di residenza noto.</li>
                                     <li>In alternativa, puoi delegare un <strong>patronato (CAF, INCA, etc.)</strong> o un avvocato per fare la richiesta al posto tuo.</li>
                                 </ul>
@@ -77,21 +77,21 @@
                      <div class="flex items-start bg-white p-6 rounded-lg shadow-md border border-gray-200">
                         <div class="step-number mr-4">2</div>
                         <div>
-                            <h3 class="text-xl font-semibold mb-2">Prepara tutti i Documenti Necessari</h3>
+                            <h3 class="text-xl font-semibold mb-2">Prepara tutti i Tuoi Documenti</h3>
                             <p class="text-gray-600 mb-3">Avere tutto pronto ti farà risparmiare tempo. Ecco la lista completa.</p>
                              <div class="divide-y divide-gray-200">
                                 <details class="py-3">
                                     <summary class="font-semibold cursor-pointer">Documenti Personali e Anagrafici</summary>
                                     <ul class="list-disc list-inside mt-2 pl-4 text-gray-600">
                                         <li>Tua carta d’identità e codice fiscale.</li>
-                                        <li>Certificato di morte del tuo ex coniuge (vedi passo 1).</li>
+                                        <li>Certificato di morte di Aurelio (vedi passo 1).</li>
                                         <li>Stato di famiglia storico (richiedibile in Comune).</li>
                                     </ul>
                                 </details>
                                 <details class="py-3">
                                     <summary class="font-semibold cursor-pointer">Documenti Matrimoniali e di Divorzio</summary>
                                     <ul class="list-disc list-inside mt-2 pl-4 text-gray-600">
-                                        <li>Estratto dell'atto di matrimonio.</li>
+                                        <li>Estratto dell'atto di matrimonio con Aurelio.</li>
                                         <li><strong>Sentenza di divorzio completa</strong> (è fondamentale che indichi l'assegno).</li>
                                     </ul>
                                 </details>
@@ -115,7 +115,7 @@
                     <div class="flex items-start bg-white p-6 rounded-lg shadow-md border border-gray-200">
                         <div class="step-number mr-4">3</div>
                         <div>
-                            <h3 class="text-xl font-semibold mb-2">Presenta la Domanda all'INPS</h3>
+                            <h3 class="text-xl font-semibold mb-2">Presenta la Domanda all'INPS (con un aiuto)</h3>
                             <p class="text-gray-600">Una volta raccolto il necessario, devi avviare la pratica. Non è automatica.</p>
                              <div class="bg-green-50 border-l-4 border-green-500 p-4 rounded-r-lg">
                                 <h4 class="font-bold">Consiglio pratico:</h4>
@@ -123,16 +123,16 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Passo 4: Il Ruolo del Tribunale -->
+                    <!-- Passo 4: La Divisione delle Quote -->
                     <div class="flex items-start bg-white p-6 rounded-lg shadow-md border border-gray-200">
                         <div class="step-number mr-4">4</div>
                         <div>
-                            <h3 class="text-xl font-semibold mb-2">La Divisione delle Quote</h3>
-                            <p class="text-gray-600">Non sarai tu a dover discutere le percentuali con la seconda moglie. Se anche lei ha diritto alla pensione, sarà il <strong>Tribunale</strong> a decidere la suddivisione. Il giudice valuterà diversi fattori:</p>
+                            <h3 class="text-xl font-semibold mb-2">Affronta la Divisione delle Quote</h3>
+                            <p class="text-gray-600">Non sarai tu a dover discutere le percentuali con la seconda moglie di Aurelio. Se anche lei ha diritto, sarà il <strong>Tribunale</strong> a decidere la suddivisione. Il giudice valuterà diversi fattori:</p>
                              <ul class="list-disc list-inside mt-3 space-y-2 text-gray-700">
                                 <li>La <strong>durata dei rispettivi matrimoni</strong> (è il criterio più importante).</li>
                                 <li>Le condizioni economiche tue e della seconda moglie.</li>
-                                <li>L'importo dell'assegno divorzile che ricevevi.</li>
+                                <li>L'importo dell'assegno divorzile che ricevevi da Aurelio.</li>
                             </ul>
                             <p class="mt-3 text-sm text-gray-600">Per questa fase, potrebbe essere utile l'assistenza di un avvocato specializzato in diritto di famiglia.</p>
                         </div>
@@ -142,8 +142,8 @@
 
             <!-- Sezione 3: Serve un avvocato? -->
             <section class="bg-white p-6 rounded-lg shadow-md border border-gray-200">
-                <h2 class="text-2xl font-bold text-gray-900 mb-4">Serve un Avvocato? Patronato vs. Avvocato</h2>
-                <p class="mb-4 text-gray-700">È una domanda molto comune. La risposta breve è: dipende dalla fase in cui ti trovi.</p>
+                <h2 class="text-2xl font-bold text-gray-900 mb-4">Ti serve un Avvocato? Facciamo chiarezza</h2>
+                <p class="mb-4 text-gray-700">È una domanda molto comune e la risposta è semplice: dipende dalla fase in cui ti trovi.</p>
                 <div class="space-y-4">
                     <div>
                         <h3 class="font-semibold text-lg">Per la domanda all'INPS: è sufficiente il Patronato</h3>
@@ -151,7 +151,7 @@
                     </div>
                     <div>
                         <h3 class="font-semibold text-lg">Per la divisione delle quote: serve l'Avvocato</h3>
-                        <p class="text-gray-600">Se anche la seconda moglie ha diritto alla pensione, l'INPS sospenderà il pagamento finché il Tribunale non avrà deciso le percentuali. In questa fase, l'assistenza di un legale è indispensabile per tutelare i tuoi interessi davanti al giudice.</p>
+                        <p class="text-gray-600">Se anche la seconda moglie di Aurelio ha diritto alla pensione, l'INPS attenderà che sia il Tribunale a decidere le percentuali. In questa fase, avere un buon avvocato al tuo fianco è indispensabile per tutelare al meglio i tuoi interessi.</p>
                     </div>
                 </div>
                 <div class="mt-6 bg-amber-50 border-l-4 border-amber-500 p-4 rounded-r-lg">
